API 호출 세팅 변경 (#645)
* 설비 구성 초기화 팝업 새로 열었을시 초기화 안된 부분 수정

설비 구성 초기화 팝업 새로 열었을시 초기화 안된 부분 수정

* Auto stash before merge of "errorControl" and "upstream/iDERMS-SaaS"

* API 호출 도메인 변경  && SPC 기본정보 수정사항 적용

API 호출 도메인 변경  && SPC 기본정보 수정사항 적용

* 공통에서 호출하는 부분 API 오류 

공통에서 호출하는 부분 API 오류

* API 호출 세팅 변경

API 호출 세팅 변경

Co-authored-by: Jaekeun <plutochild7@gamil.com>